--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,84 +1,109 @@
 body {
-background-color: #ccc;
+	background-color: #ccc;
 }
 
 a {
-color: #08c;
-text-decoration: none;
+	color: #08c;
+	text-decoration: none;
 }
 
 li.subject {
-	margin : 0 10px;
+	margin: 0 10px;
 }
 
-.zw_class {
-padding: 15px;
-border: 1px solid #e1e1e1;
-background: #fafafa;
-margin-bottom: 20px;
+.content-unit {
+	padding: 15px;
+	border: 1px solid #e1e1e1;
+	background: #fafafa;
+	margin-bottom: 20px;
 }
 
-.zw_class dl {
-width: 900px;
-line-height: 25px;
-overflow: hidden;
-zoom: 1;
+.content-unit dl {
+	margin-left: 30px;
+	width: 900px;
+	line-height: 25px;
+	overflow: hidden;
+	zoom: 1;
 }
 
-.zw_class dt {
-overflow: hidden;
-zoom: 1;
+.content-unit dt {
+	overflow: hidden;
+	zoom: 1;
 }
 
-.zw_class dt em {
-float: left;
-padding-right: 20px;
-font-weight: bold;
-font-size: 14px;
+.content-unit dt em {
+	float: left;
+	padding-right: 20px;
+	font-weight: bold;
+	font-size: 14px;
 }
 
-.zw_class dt strong {
-width: 50px;
-display: block;
-float: left;
-line-height: 26px;
+.content-unit dt strong {
+	width: 50px;
+	display: block;
+	float: left;
+	line-height: 26px;
 }
 
-.zw_class dt span {
-float: left;
-display: block;
-width: 675px;
+.content-unit dt span {
+	float: left;
+	display: block;
+	width: 675px;
 }
-.zw_class dt span b {
-font-weight: normal;
-}
-
-.zw_class dt a {
-display: block;
-float: left;
-width: 67px;
-height: 16px;
-line-height: 16px;
-margin: 5px 4px;
+.content-unit dt span b {
+	font-weight: normal;
 }
 
-.zw_class dt span i {
-padding: 0px 2px;
+.content-unit dt a {
+	display: block;
+	float: left;
+	width: 67px;
+	height: 16px;
+	line-height: 16px;
+	margin: 5px 4px;
+}
+
+.content-unit dt span i {
+	padding: 0px 2px;
 }
 
 nobr {
-white-space: nowrap;
+	white-space: nowrap;
 }
 
 .orange {
-color: #ff6e00;
+	color: #ff6e00;
 }
 
 em, i {
-font-style: normal;
+	font-style: normal;
 }
 
 /* post list */
 .media {
 	border-bottom: #D0D0D0 dashed 1px;
+}
+
+/* 小块数据 */
+.content-unit {
+
+	padding: 10px;
+	margin-bottom: 30px;
+	color: inherit;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+	box-shadow: 0 0px 2px rgba(0,0,0,0.05);
+	background-color: #fff;
+}
+
+/* side bar*/
+.siderbar-unit {
+	padding: 10px;
+	margin-bottom: 30px;
+	color: inherit;
+	background-color: #eee;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
 }
